fix: improve contrast of icons
Change the baseline colour of the icons match the deemphasised text.
Use a simpler background hover/active state.
This means the icons meet at least 3:1 contrast ratio against the background.

--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -1,12 +1,9 @@
 :root {
   $deemphasized-color: lighten($main-bg-color, 45%);
 
+  --action-button-fill-color: #{darken($deemphasized-color, 2%)};
   --action-button-deemphasized-fill-color: #{$deemphasized-color};
-  --action-button-deemphasized-fill-color-hover: #{lighten($deemphasized-color, 22%)};
-  --action-button-deemphasized-fill-color-active: #{lighten($deemphasized-color, 5%)};
   --action-button-deemphasized-fill-color-pressed: #{darken($deemphasized-color, 7%)};
-  --action-button-deemphasized-fill-color-pressed-hover: #{darken($deemphasized-color, 2%)};
-  --action-button-deemphasized-fill-color-pressed-active: #{darken($deemphasized-color, 15%)};
 
   --loading-bg: #{#222};
 
